<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_story_content"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_below="@+id/text_story_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_light"
        android:fadeScrollbars="false"
        android:gravity="top"
        android:hint="@string/page_content_hint"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="300"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_below="@+id/edit_story_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_light"
            android:gravity="center"
            android:text="@string/stuffed_animal"
            android:textColor="@color/black"
            android:textSize="140sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finish_story"
            android:textSize="18sp" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_light_background">

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:padding="16dp"
            android:text="@string/page_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

    </FrameLayout>

</RelativeLayout>