<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_story_content"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_below="@+id/text_story_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_light"
        android:gravity="top"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_below="@+id/text_story_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/stuffed_animal"
        android:textColor="@color/black"
        android:textSize="150sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_light_background">

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:padding="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:padding="16dp"
            android:text="@string/page_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:padding="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_the_end"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/the_end"
            android:textColor="#000000" />

    </FrameLayout>

</RelativeLayout>
